<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu1_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    tools:context="com.citylifeezy.citylifeezy.fragments.YourPlacesFragment">

    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:text="Your Places' List"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white" />

    <!--<RelativeLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_below="@+id/favoriteButton"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->



    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/gpslocationView"
        android:layout_below="@+id/favoriteButton"
        android:background="@drawable/location1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--</RelativeLayout>-->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:layout_above="@+id/lout"
        android:background="@color/transparent_white">

        <TextView
            android:id="@+id/incoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="All colored flags show incoming traffic flow to respective traffic points!"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent_white"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/green_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/free_road"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/blue_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/low_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/yellow_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/moderate_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/pink_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/heavy_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/red_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/extreme_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>