<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu1_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    tools:context="com.citylifeezy.citylifeezy.fragments.TrafficFragment">

    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/llSearchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <!--<AutoCompleteTextView-->
            <!--android:id="@+id/autoCompleteTextViewOK"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="8"-->
            <!--android:padding="10dp"-->
            <!--android:textColor="@color/grey"-->
            <!--android:background="@drawable/rounded_edittext"-->
            <!--android:hint="Search Area"-->
            <!--android:textColorHint="@color/darker_gray"-->
            <!--android:completionThreshold="1"-->
            <!--android:ems="10"-->
            <!--android:visibility="visible" />-->

        <Spinner
            android:id="@+id/spinnerAreaName"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_layout_bg"
            android:elevation="4dp"
            android:popupBackground="@drawable/spinner_layout_bg"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/h_line"/>

        <ImageView
            android:id="@+id/searchAreaView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:layout_toRightOf="@+id/spinnerAreaName"
            android:src="@drawable/ic_action_next_item"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:layout_above="@+id/lout"
        android:background="@color/transparent_white">

        <TextView
            android:id="@+id/incoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="All colored flags show incoming traffic flow to respective traffic points!"
            android:textSize="10sp"
            android:textColor="@color/black"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"
            android:singleLine="true"
            android:gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent_white"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/green_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/free_road"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/blue_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/low_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/yellow_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/moderate_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/pink_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/heavy_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/rectimage_5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/red_rect" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/extreme_traffic"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>